Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.1 - unreleased

	Ken Jones
        - beta version of vpopmaild for php applications.
	- Add SpamAssassin support for vdelivermail.
        - Increase max domain name size from 64 to 96. 
          The actual maximum length of a host name is 256.
        - vcdb.c: use open/read/close instead of stream based
          fopen/fread/fclose in vauth_getpw. Slightly more efficent.
        - file_lock.c change get_write_lock to use file descriptor
          instead of FILE *;
        - vpopmail.c: for locks, use open/close instead of fopen/fclose
        - vcdb.c: for locks, use open/close instead of fopen/fclose
        - vdelivermail.c: wait on pid for qmail-inject to finish
          before continuing in deliver_mail function.

	Michael Bowe
	- Minor documentation tweaks

5.5.0 - released 11-Mar-04

	Tom Collins
	- Consolidate table creation code in vmysql.c and vpgsql.c.
	- Increase SQL_BUF_SIZE from 600 to 2048 for Oracle, Postgres
	  and Sybase.
	- Add qnprintf() to vpopmail.c for escaping strings in SQL queries.
	- Use qnprintf() when building queries in vmysql.c, vpgsql.c,
	  voracle.pc, and vsybase.c.
	- Multiple fixes to vpgsql.c related to freeing PGresults and
	  attempting to access NULL PGresults when reporting errors.

5.4.3 - released 11-Mar-04

	Tom Collins
	- Add missing link libs (m, nsl, socket) on Solaris installs.
	- Fix vsetuserquota() to write properly formatted quota to 
	  maildirsize file.
	- Update vdominfo to ignore non-domains in users/assign.
	- Update vconvert and dotqmail2valias to ignore non-domains in
	  users/assign.

5.4.2 - released 22-Feb-04

	Tom Collins
	- Remove attempts to free() static buffers in vpgsql.c. [888888]
	- Fix problems with creating valias table in vpgsql.c. [892595]
	- Remove unnecessary check for C++ from configure[.in].