@@ -4,6 +4,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 5.5.1 - unreleased
 
 	Ken Jones
+        - add support for system_admin privileges using
+          new gid_flag SA_ADMIN.
         - beta version of vpopmaild for php applications.
 	- Add SpamAssassin support for vdelivermail.
         - Increase max domain name size from 64 to 96. 
